fix errors / warnings