@@ -227,7 +227,7 @@ public class DataQualityRunner implements QuartzJob {
       String emailSubject = getEmailSubject(errors, warnings);
       ContainerTag<?> emailIntro = p(join(
           "System: ", b(String.format("%s / %s", System.getProperty("os.arch"), System.getProperty("os.name"))), br(),
-          "Time: ", b(startZdt.format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss z", new Locale("en")))), br(),
+          "Time: ", b(startZdt.format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss z", Locale.of("en")))), br(),
           "Duration :", b(String.valueOf(startSW.elapsed().getSeconds())), "seconds"));
       ContainerTag<?> emailContent = getEmailContent(dqInformation);
       if (errors + warnings >= MINIMUM_VIOLATIONS &&
